// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DocumentsStatusBox /> should match accepted snapshot 1`] = `
<div
  className="sc-bdVaJa jWNQhz k-DocumentsStatusBox k-DocumentsStatusBox--wait"
>
  <div
    className="k-DrocumentDropUploader__icon"
  >
    <svg
      className="k-ColorSvg"
      height={22}
      viewBox="0 0 20 20"
      width={22}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        cx="10"
        cy="10"
        fill="#222"
        r="10"
      />
      <path
        d="M11 9h3v2H9V4h2v5z"
        fill="#fff"
      />
    </svg>
  </div>
  <div
    className="k-DocumentsStatusBox__content"
  >
    <p
      className="k-u-line-height-1 k-u-size-tiny k-u-weight-regular k-DocumentsStatusBox__title k-u-margin-top-none k-u-margin-bottom-noneHalf"
    >
      Document status: accepted
    </p>
    <ul
      className="k-DocumentsStatusBox__fileList"
    >
      <li
        className="k-u-size-micro k-u-weight-light k-DocumentsStatusBox__fileName"
      >
        kitten_document_1.jpg
      </li>
      <li
        className="k-u-size-micro k-u-weight-light k-DocumentsStatusBox__fileName"
      >
        kitten_document_2.jpg
      </li>
    </ul>
  </div>
</div>
`;

exports[`<DocumentsStatusBox /> should match denied snapshot 1`] = `
<div
  className="sc-bdVaJa jWNQhz k-DocumentsStatusBox k-DocumentsStatusBox--wait"
>
  <div
    className="k-DrocumentDropUploader__icon"
  >
    <svg
      className="k-ColorSvg"
      height={22}
      viewBox="0 0 20 20"
      width={22}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        cx="10"
        cy="10"
        fill="#222"
        r="10"
      />
      <path
        d="M11 9h3v2H9V4h2v5z"
        fill="#fff"
      />
    </svg>
  </div>
  <div
    className="k-DocumentsStatusBox__content"
  >
    <p
      className="k-u-line-height-1 k-u-size-tiny k-u-weight-regular k-DocumentsStatusBox__title k-u-margin-top-none k-u-margin-bottom-noneHalf"
    >
      Document status: denied
    </p>
    <ul
      className="k-DocumentsStatusBox__fileList"
    >
      <li
        className="k-u-size-micro k-u-weight-light k-DocumentsStatusBox__fileName"
      >
        kitten_document_1.jpg
      </li>
      <li
        className="k-u-size-micro k-u-weight-light k-DocumentsStatusBox__fileName"
      >
        kitten_document_2.jpg
      </li>
    </ul>
    <p
      className="k-u-line-height-1 k-u-size-micro k-u-weight-regular k-DocumentsStatusBox__message k-u-margin-bottom-none k-u-margin-top-noneHalf"
    >
      The document was incorrect
    </p>
  </div>
</div>
`;

exports[`<DocumentsStatusBox /> should match empty snapshot 1`] = `
<div
  className="sc-bdVaJa jWNQhz k-DocumentsStatusBox k-DocumentsStatusBox--wait"
>
  <div
    className="k-DrocumentDropUploader__icon"
  >
    <svg
      className="k-ColorSvg"
      height={22}
      viewBox="0 0 20 20"
      width={22}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        cx="10"
        cy="10"
        fill="#222"
        r="10"
      />
      <path
        d="M11 9h3v2H9V4h2v5z"
        fill="#fff"
      />
    </svg>
  </div>
  <div
    className="k-DocumentsStatusBox__content"
  >
    <p
      className="k-u-line-height-1 k-u-size-tiny k-u-weight-regular k-DocumentsStatusBox__title k-u-margin-top-none k-u-margin-bottom-noneHalf"
    >
      
    </p>
  </div>
</div>
`;

exports[`<DocumentsStatusBox /> should match wait snapshot 1`] = `
<div
  className="sc-bdVaJa jWNQhz k-DocumentsStatusBox k-DocumentsStatusBox--wait"
>
  <div
    className="k-DrocumentDropUploader__icon"
  >
    <svg
      className="k-ColorSvg"
      height={22}
      viewBox="0 0 20 20"
      width={22}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        cx="10"
        cy="10"
        fill="#222"
        r="10"
      />
      <path
        d="M11 9h3v2H9V4h2v5z"
        fill="#fff"
      />
    </svg>
  </div>
  <div
    className="k-DocumentsStatusBox__content"
  >
    <p
      className="k-u-line-height-1 k-u-size-tiny k-u-weight-regular k-DocumentsStatusBox__title k-u-margin-top-none k-u-margin-bottom-noneHalf"
    >
      Documents status: awaiting confirmation
    </p>
    <ul
      className="k-DocumentsStatusBox__fileList"
    >
      <li
        className="k-u-size-micro k-u-weight-light k-DocumentsStatusBox__fileName"
      >
        kitten_document_1.jpg
      </li>
      <li
        className="k-u-size-micro k-u-weight-light k-DocumentsStatusBox__fileName"
      >
        kitten_document_2.jpg
      </li>
    </ul>
    <p
      className="k-u-line-height-1 k-u-size-micro k-u-weight-regular k-DocumentsStatusBox__message k-u-margin-bottom-none k-u-margin-top-noneHalf"
    >
      This process can take up to two days
    </p>
  </div>
</div>
`;
